
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creator-economy-earnings-forecast"
version = "0.1.0"
description = "Forecast creator revenue variability and identify platform-side levers that improve retention."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
